kubernetes/network/pve-egress/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pve
  namespace: network
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "pve.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pve-relay
          port: 8006
